src/objects/Exchange__c.object
<CustomObject>
    <fields>
        <fullName>days_in_year__c</fullName>
        <label>Days In Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>settlement_days__c</fullName>
        <label>Settlement Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trading_fee_strategy__c</fullName>
        <label>Trading Fee Strategy</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Exchange</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exchange Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>